# aiaa-5032-final

./: .env.example  .gitignore  AGENTS.md  AIAA 5032 - Midterm Presentation - Group12 - Approch Part.pptx  PLAN.md  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py  answerer.py  config.py  knowledge_store.py  main.py  models.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  DATA_SOURCES.md  LOCAL_RUNBOOK.md  PLAN.md  README.md  ROADMAP.md
frontend/: index.html  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MofWorkbench.tsx
frontend/lib/: api.ts  presentation.test.ts  presentation.ts
reference_code/MOF_KG/: 1.water_stability_chemunity_v0.1.0.csv  2.MOF_names_and_CSD_codes.csv  (+1 more)
tests/: test_api.py  test_graph_retriever.py  test_index_vectors.py  test_knowledge_store.py  test_llm_answerer.py  test_rag_chunks.py  test_rag_config.py  test_rag_embeddings.py  test_retrievers.py  test_synthesis_evidence.py  test_vector_retriever.py  test_vector_store.py
tools/kg_builder/: README.md  pyproject.toml  ragimprove.md  requirements.txt
tools/kg_builder/src/mof_kg/: __init__.py  cli.py  config.py  generate_qa_dataset.py
tools/kg_builder/src/mof_kg/builder/: __init__.py  exporters.py  graph_builder.py
tools/kg_builder/src/mof_kg/extractors/: __init__.py  name_mapping.py  synthesis.py  water_stability.py
tools/kg_builder/src/mof_kg/models/: __init__.py  schema.py
tools/kg_builder/src/mof_kg/normalizer/: __init__.py  precursor.py
(+28 files in other folders)
